fixed some stuff on mobile

--- a/public/hexdraw.css
+++ b/public/hexdraw.css
@@ -128,6 +128,8 @@ a:active {
 	z-index:10;
 }
 .color-item.mobile{
+	width:40px;
+	height:40px;
 	margin-left:4px;
 	margin-right:4px;
 }
@@ -136,14 +138,13 @@ a:active {
 {
 	display:inline;
 	text-align:center;
-	vertical-align:middle;
 	line-height:50px;
 	float:right;
 	background-size:contain;
 	border-style:solid;
 	border-width:5px;
 	border-color:rgba(0,0,0,0);
-	font-size: 1.2em;
+	
 	color: rgba(255,255,255,1);
 	margin-top:4px;
 	margin-bottom:4px;
@@ -153,6 +154,10 @@ a:active {
 }
 
 .utility-item.mobile{
+	font-size: 1em;
+	line-height:30px;
+	width:40px;
+	height:40px;
 	margin-left:4px;
 	margin-right:4px;
 }
